# pjecz-lira-api-key

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
pjecz_lira_api_key/: main.py
pjecz_lira_api_key/config/: settings.py
pjecz_lira_api_key/dependencies/: authentications.py  cryptography_api_key.py  database.py  fastapi_not_implemented.py  fastapi_pagination_custom_page.py  safe_string.py  universal_mixin.py
pjecz_lira_api_key/models/: autoridades.py  bitacoras.py  distritos.py  domicilios.py  entradas_salidas.py  modulos.py  permisos.py  roles.py  siga_agendas.py  siga_expedientes.py  siga_salas.py  siga_sistemas.py  siga_videos.py  tareas.py  usuarios.py  usuarios_roles.py
pjecz_lira_api_key/routers/: autoridades.py  bitacoras.py  distritos.py  domicilios.py  entradas_salidas.py  modulos.py  permisos.py  roles.py  siga_agendas.py  siga_expedientes.py  siga_salas.py  siga_sistemas.py  siga_videos.py  tareas.py  usuarios.py  usuarios_roles.py
pjecz_lira_api_key/schemas/: autoridades.py  bitacoras.py  distritos.py  domicilios.py  entradas_salias.py  modulos.py  permisos.py  roles.py  siga_agendas.py  siga_expedientes.py  siga_grabaciones.py  siga_salas.py  siga_sistemas.py  siga_videos.py  tareas.py  usuarios.py  usuarios_roles.py
