[project]
name = "pjecz-lira-api-key"
version = "0.1.0"
description = "API para el respaldo y la transcripción de videos."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "fastapi-pagination>=0.15.12",
    "google-auth>=2.49.2",
    "google-cloud>=0.34.0",
    "google-cloud-secret-manager>=2.27.0",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=25.3.0",
    "hashids>=1.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pytz>=2026.1.post1",
    "sqlmodel>=0.0.38",
    "unidecode>=1.4.0",
    "uvicorn>=0.44.0",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
